test: for java sdk (#22)
Signed-off-by: tison <wander4096@gmail.com>