@@ -46,17 +46,17 @@
         <junit.version>5.9.2</junit.version>
         <okhttp.version>4.12.0</okhttp.version>
         <retrofit.version>2.11.0</retrofit.version>
-        <slf4j.version>2.0.7</slf4j.version>
+        <slf4j.version>2.0.16</slf4j.version>
 
         <!-- plugins dependencies -->
-        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
+        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
-        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
         <gson.version>2.11.0</gson.version>
-        <jetbrains-annotations.version>24.0.1</jetbrains-annotations.version>
-        <palantir-java-format.version>2.36.0</palantir-java-format.version>
-        <spotless.version>2.39.0</spotless.version>
+        <jetbrains-annotations.version>26.0.1</jetbrains-annotations.version>
+        <palantir-java-format.version>2.50.0</palantir-java-format.version>
+        <spotless.version>2.43.0</spotless.version>
     </properties>
 
     <dependencyManagement>
@@ -179,6 +179,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
